2010-06-27  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.8.3

	* debian/*: Similarly updated for new release to Debian

	* inst/unitTests/runTests.R: Stop-gap measure to reduce the number of
	tests run on Windows as we now have so many tests that the build
	exceeds the time limit granted by the win-builder service. The forced
	reduction of tests can be overcome by adding --allTests as a
	command-line argument on Windows, or by running on another platform.

2010-06-25  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/posix.h: anticipate R 2.12.0 switch of classes
	POSIXt and POSIXct

	* inst/include/classic: New home for the 'classic' API headers. Also
	some refactoring of the internals so that they can interoperate
	better withuse the new API.

2010-06-24  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/RangeIndexer.h: factored the RangeIndexer
	class out of Vector, so that we can at a later time specialize it for
	character vectors, lists, etc ...

2010-06-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: add struct tm member variable and
	sensible (ie non-intra-day) accessor functions; add SEXP ctor
	* src/Date.cpp: Implementation of the above
	* inst/unitTests/runit.Date.R: tests for the above

	* inst/include/Rcpp/Datetime.h: New Datetime class
	* src/Datetime.cpp: Implementation for new Datetime class
	* inst/unitTests/runit.Datetime.R: first tests for Rcpp::Datetime
	* inst/include/Rcpp/Datetime_forward.h: API Integration

	* inst/include/Rcpp/DatetimeVector.h: New DatetimeVector class
	* src/Datetime.cpp: Implementation for new DatetimeVector class

2010-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Import mktime00() from R's src/main/datetime.c,
	  completed class implementation
	* inst/include/Rcpp/Date.h: Add mktime00() declaration

	* inst/include/Rcpp/DateVector.h: New DateVector class
	* src/Date.cpp: Implementation for new DateVector class
