@@ -39,4 +39,10 @@
 #include <Rcpp/sugar/functions/ceil.h>
 #include <Rcpp/sugar/functions/pow.h>
 
+#include <Rcpp/sugar/functions/Re.h>
+#include <Rcpp/sugar/functions/Im.h>
+#include <Rcpp/sugar/functions/Conj.h>
+#include <Rcpp/sugar/functions/Mod.h>
+
+
 #endif
